style: ui changed

--- a/app/src/main/res/layout/add_text_arrival_fragment.xml
+++ b/app/src/main/res/layout/add_text_arrival_fragment.xml
@@ -21,8 +21,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/add_text_rule_title"
-            android:textAppearance="@style/myDetailTitleStyle"
-            />
+            android:textAppearance="@style/myDetailTitleStyle" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,51 +49,39 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_margin="8dp"
             android:text="@string/after_reaching" />
 
         <Spinner
             android:id="@+id/arrival_spinner"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:gravity="end"
             android:minHeight="12dp" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_margin="8dp"
             android:gravity="start"
-            android:text="@string/from" />
+            android:text="@string/while_departuring_from" />
 
         <Spinner
             android:id="@+id/departure_spinner"
-            android:layout_width="0dp"
             style="@style/spinnerItemStyle2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:gravity="end"
             android:minHeight="12dp" />
-    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -108,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="start"
-                android:text="with text" />
+                android:text="@string/with_text" />
 
             <Spinner
                 android:id="@+id/message_spinner"
