--- a/app/src/main/res/layout-v21/text_rules.xml
+++ b/app/src/main/res/layout-v21/text_rules.xml
@@ -50,6 +50,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
+                    android:background="@color/colorPrimary"
                     android:onClick="onSMSPermissionClicked" />
 
             </RelativeLayout>
