--- a/app/src/main/res/layout/places.xml
+++ b/app/src/main/res/layout/places.xml
@@ -12,7 +12,8 @@
         android:layout_gravity="top"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/locaton_permission_layout"
@@ -68,7 +69,7 @@
             android:layout_margin="16dp"
             android:background="@drawable/rounded_button"
             android:contentDescription="@string/add_new_location"
-            android:onClick="onAddPlaceButtonClicked"
+            android:onClick="OnMapButtonClicked"
             android:padding="8dp"
             android:text="@string/add_new_location"
             android:textAppearance="@style/myButtonStyleSmall"
