--- a/app/src/main/res/layout/places.xml
+++ b/app/src/main/res/layout/places.xml
@@ -105,7 +105,7 @@
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/places_label"></android.support.v7.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@+id/places_label" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
