--- a/app/src/main/res/layout/sound_rules.xml
+++ b/app/src/main/res/layout/sound_rules.xml
@@ -49,6 +49,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
+                    android:background="@android:drawable/checkbox_off_background"
                     android:onClick="onSoundPermissionClicked" />
 
             </RelativeLayout>
