--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#2e7d32</color>
     <color name="colorPrimaryDark">#005005</color>
     <color name="colorPrimaryLight">#60ad5e</color>
-    <color name="colorAccent">#76ff03</color>
+    <color name="colorAccent">#76FF03</color>
     <color name="TextOnLight">#000000</color>
     <color name="text_color_primary">#ffffff</color>
 </resources>
