--- a/app/src/main/res/layout/places.xml
+++ b/app/src/main/res/layout/places.xml
@@ -51,18 +51,16 @@
                     android:id="@+id/location_permission_checkbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:layout_marginStart="45dp"
-                    android:layout_marginLeft="45dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:background="@android:drawable/checkbox_off_background"
                     android:gravity="center"
                     android:onClick="onLocationPermissionClicked"
-                    android:paddingStart="8dp" />
+                    android:textColor="@color/colorPrimary"
+                    android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
+                    android:textColorHint="@color/colorAccent" />
 
             </RelativeLayout>
         </LinearLayout>
