--- a/app/src/main/res/layout/new_notification_rule.xml
+++ b/app/src/main/res/layout/new_notification_rule.xml
@@ -30,6 +30,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:text="@string/add_notification_rule"
+                android:textAllCaps="true"
                 android:textAppearance="@style/myDetailTitleStyle" />
 
 
@@ -45,10 +46,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="start"
+                    style="@android:style/TextAppearance.Large"
                     android:text="@string/notify_me_after_arrival" />
 
                 <Spinner
                     android:id="@+id/arrival_notification_spinner"
+                    android:background="@drawable/btn_dropdown"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end"
@@ -57,11 +60,13 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@android:style/TextAppearance.Large"
                     android:gravity="start"
                     android:text="@string/if_I_departured_from" />
 
                 <Spinner
                     android:id="@+id/departure_anywhere_notification_spinner"
+                    android:background="@drawable/btn_dropdown"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end"
@@ -106,11 +111,13 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@android:style/TextAppearance.Large"
                     android:gravity="start"
                     android:text="@string/notify_me_after_departuring_from" />
 
                 <Spinner
                     android:id="@+id/departure_notification_spinner"
+                    android:background="@drawable/btn_dropdown"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end"
