--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize the theme. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -15,7 +15,7 @@
         <item name="android:colorForeground">@color/TextOnLight</item>
     </style>
 
-    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme.NoActionBar" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
@@ -46,9 +46,8 @@
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
 
-    <style name="mySpinnerStyle" parent="Base.Widget.AppCompat.DropDownItem.Spinner">
-        <item name="android:textColor">@color/TextOnLight</item>
-        <item name="android:textSize">16sp</item>
+    <style name="mySpinnerStyle" parent="@android:style/Widget.Spinner.DropDown">
+        <item name="android:colorActivatedHighlight">#760003</item>
     </style>
 
     <style name="mySpinnerStyleItem" parent="Widget.AppCompat.TextView.SpinnerItem">
