--- a/app/src/main/res/layout/add_text_departure_fragment.xml
+++ b/app/src/main/res/layout/add_text_departure_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -26,81 +26,67 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/add_text_rule_title"
+            android:textAllCaps="true"
             android:textAppearance="@style/myDetailTitleStyle" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"
-            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_margin="8dp"
                 android:gravity="start"
+                style="@android:style/TextAppearance.Large"
                 android:text="@string/send_sms_to" />
 
             <Spinner
                 android:id="@+id/name_departure_spinner"
-                style="@style/spinnerItemStyle2"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
                 android:gravity="end"
+                android:background="@drawable/btn_dropdown"
                 android:minHeight="12dp" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_margin="8dp"
+                style="@android:style/TextAppearance.Large"
                 android:gravity="start"
                 android:text="@string/after_departuring_from" />
 
             <Spinner
                 android:id="@+id/departure_place_rule_spinner"
-                style="@style/spinnerItemStyle2"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/btn_dropdown"
                 android:gravity="end"
                 android:minHeight="12dp" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:orientation="horizontal">
+
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_margin="8dp"
                 android:gravity="start"
+                style="@android:style/TextAppearance.Large"
                 android:text="@string/with_text" />
 
             <Spinner
                 android:id="@+id/message_departure_spinner"
-                style="@style/spinnerItemStyle2"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/btn_dropdown"
                 android:gravity="end"
                 android:minHeight="12dp" />
-        </LinearLayout>
+
 
         <Button
             android:id="@+id/departure_rule_button"
@@ -121,4 +107,4 @@
     </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+</ScrollView>
