--- a/app/src/main/res/layout/new_wifi_rule.xml
+++ b/app/src/main/res/layout/new_wifi_rule.xml
@@ -24,6 +24,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/add_new_rule"
+            android:textAllCaps="true"
             android:textAppearance="@style/myDetailTitleStyle" />
 
         <LinearLayout
@@ -40,6 +41,7 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    style="@android:style/TextAppearance.Large"
                     android:layout_weight="1"
                     android:gravity="start"
                     android:text="@string/turn_wi_fi" />
@@ -48,6 +50,7 @@
                     android:id="@+id/on_wifi_spinner"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/btn_dropdown"
                     android:layout_weight="2"
                     android:gravity="end"
                     android:minHeight="12dp" />
@@ -57,6 +60,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                style="@android:style/TextAppearance.Large"
                 android:gravity="start"
                 android:text="@string/after_my_arrival_to" />
 
@@ -64,6 +68,7 @@
                 android:id="@+id/arrival_wifi_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/btn_dropdown"
                 android:gravity="end"
                 android:minHeight="12dp" />
 
@@ -72,12 +77,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
+                style="@android:style/TextAppearance.Large"
                 android:text="@string/if_I_departured_from" />
 
             <Spinner
                 android:id="@+id/departure_anywhere_wifi_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/btn_dropdown"
                 android:gravity="end"
                 android:minHeight="12dp" />
 
@@ -115,6 +122,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="start"
+                    style="@android:style/TextAppearance.Large"
                     android:text="@string/turn_wi_fi" />
 
                 <Spinner
@@ -122,6 +130,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
+                    android:background="@drawable/btn_dropdown"
                     android:gravity="end"
                     android:minHeight="12dp" />
             </LinearLayout>
@@ -135,12 +144,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="start"
+                    style="@android:style/TextAppearance.Large"
                     android:text="@string/after_departuring_from" />
 
                 <Spinner
                     android:id="@+id/departure_wifi_spinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/btn_dropdown"
                     android:gravity="end"
                     android:minHeight="12dp" />
             </LinearLayout>
