--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/text1"
+    style="@style/Base.TextAppearance.AppCompat.Medium"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="end"
     android:layout_margin="8dp"
-    android:textSize="16sp"
+    android:maxLines="3"
+    android:textAllCaps="true"
     android:textColor="@color/TextOnLight" />
