refactor: remove unused resources

--- a/app/src/main/res/layout-v26/message.xml
+++ b/app/src/main/res/layout-v26/message.xml
@@ -37,7 +37,8 @@
             android:inputType="textShortMessage|textLongMessage"
             android:lines="5"
             android:maxLength="160"
-            android:minLines="2"/>
+            android:minLines="2"
+            android:autofillHints="@string/insert" />
 
 
         <Button
