--- a/app/src/main/res/layout-v21/add_text_rule.xml
+++ b/app/src/main/res/layout-v21/add_text_rule.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
+        android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
@@ -22,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:background="@color/colorPrimaryDark"
+        android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
