--- a/app/src/main/res/layout-w600dp/new_wifi_rule.xml
+++ b/app/src/main/res/layout-w600dp/new_wifi_rule.xml
@@ -15,7 +15,6 @@
         android:textAlignment="center">
 
         <TextView
-            android:id="@+id/add_text_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -30,7 +29,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:baselineAligned="false">
 
             <LinearLayout
                 android:layout_width="0dp"
