--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -21,7 +21,7 @@
         android:layout_margin="2dp"
         />
 
-    </android.support.v7.widget.CardView>>
+    </android.support.v7.widget.CardView>
 
     <fragment
         android:id="@+id/map"
