--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -6,6 +6,7 @@
     android:padding="12dp"
     android:ellipsize="end"
     android:textAllCaps="true"
+    android:textColor="@color/TextOnLight"
     android:textAppearance="@style/TextAppearance.AppCompat.Large"
     android:background="@drawable/spinner_item_border"
     />
