--- a/app/src/main/res/layout-land/notification_rules.xml
+++ b/app/src/main/res/layout-land/notification_rules.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,15 +10,18 @@
         android:layout_margin="8dp"
         android:orientation="vertical">
 
-
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
+            android:layout_gravity="bottom|center_vertical|end"
             android:layout_margin="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="64dp"
             android:background="@drawable/rounded_button"
-            android:contentDescription="@string/add_new_rule"
-            android:onClick="onAddSoundRulesButtonClicked"
+            android:contentDescription="@string/add_new_contact"
+            android:onClick="onAddNotificationRulesButtonClicked"
             android:text="@string/new_rule"
             android:textAppearance="@style/myButtonStyleSmall"
             android:textColor="@color/text_color_primary" />
@@ -39,12 +39,14 @@
 
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/soundrules_list_recycler_view"
+            android:id="@+id/notification_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:layout_margin="8dp" />
+
+
+
     </LinearLayout>
 
-
-</android.support.design.widget.CoordinatorLayout>
+</ScrollView>
