--- a/app/src/main/res/layout-land/sound_rules.xml
+++ b/app/src/main/res/layout-land/sound_rules.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -47,4 +47,4 @@
     </LinearLayout>
 
 
-</android.support.design.widget.CoordinatorLayout>
+</ScrollView>
