--- a/app/src/main/res/layout-land/text_rules.xml
+++ b/app/src/main/res/layout-land/text_rules.xml
@@ -34,7 +34,7 @@
                 android:padding="8dp"
                 android:text="@string/contacts"
                 android:textAppearance="@style/myButtonStyleSmall"
-                android:textColor="@android:color/white" />
+                android:textColor="@color/text_color_primary" />
 
 
             <Button
@@ -52,11 +52,11 @@
                 android:onClick="onMessagesButtonClicked"
                 android:text="@string/my_texts"
                 android:textAppearance="@style/myButtonStyleSmall"
-                android:textColor="@android:color/white" />
+                android:textColor="@color/text_color_primary" />
 
         </LinearLayout>
 
-        <Button
+             <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -80,7 +80,6 @@
             android:textAppearance="@style/myDetailTitleStyle" />
 
 
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/sendrules_list_recycler_view"
             android:layout_width="match_parent"
@@ -88,21 +87,7 @@
             android:layout_gravity="top"
             android:layout_margin="8dp" />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="44dp"
-            android:layout_marginBottom="32dp"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_button"
-            android:contentDescription="@string/add_new_contact"
-            android:maxWidth="@dimen/button_width"
-            android:onClick="onAddSendRulesButtonClicked"
-            android:text="@string/new_rule"
-            android:textAppearance="@style/myButtonStyleSmall" />
     </LinearLayout>
+
 
 </ScrollView>
