--- a/app/src/main/res/layout-v21/text_rules.xml
+++ b/app/src/main/res/layout-v21/text_rules.xml
@@ -12,49 +12,6 @@
         android:layout_margin="8dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:contentDescription="@string/sms_icon"
-                android:paddingTop="4dp"
-                android:paddingEnd="8dp"
-                android:paddingStart="8dp"
-                android:paddingBottom="4dp"
-                app:srcCompat="@drawable/ic_sms_green_24dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/sms_permission"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@android:color/black" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <CheckBox
-                    android:id="@+id/sms_permission_checkbox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@android:drawable/checkbox_off_background"
-                    android:onClick="onSMSPermissionClicked" />
-
-            </RelativeLayout>
-        </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="44dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="44dp"
                 android:layout_marginBottom="8dp"
@@ -87,6 +45,7 @@
                 android:layout_marginLeft="44dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="44dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_button"
